# sklearn_practice

./: access_attributes_girid_search_pipeline.py  pipelines.py  pyproject.toml
column_transformer/: example_1.py  example_2.py
pipeline/: access_attributes.py  access_attributes_girid_search_pipeline.py  grid_search_pipelines.py  make_pipelines.py  select_model_by_grid_search.py
