[tool.poetry]
name = "sklearn-practice"
version = "0.1.0"
description = ""
authors = ["insilicomab <nakada.mitsutaka.c76@kyoto-u.jp>"]
readme = "README.md"
packages = [{include = "sklearn_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
